--- a/frontend/src/product-card.css
+++ b/frontend/src/product-card.css
@@ -2,6 +2,8 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: #9f9e9e;
     max-width: 100%;
+    max-height: 100%;
+    margin-bottom: 10px;
 }
 
 .wrapper {
@@ -15,14 +17,13 @@
     display: flex;
     justify-content: center;
     height: 80px;
-    margin-top: 20px;
     line-height: 20px;
     box-shadow: 5px 10px 10px dimgrey;
     border: solid 3px white;
     border-radius: 10px;
     background-color: #823333;
     margin-left: 20px;
-    width: 100%;
+    width: 98%;
 }
 
 .prod-cat-container {
